# binary_angle_measure

./: CMakeLists.txt  README.md
include/: bam.h
src/: bam.c
tests/: bam_tests.c
